--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "devDependencies": {
         "@symfony/webpack-encore": "^0.31.0",
         "core-js": "^3.0.0",
+        "gulp": "^4.0.2",
         "node-sass": "^4.14.1",
         "regenerator-runtime": "^0.13.2",
         "sass-loader": "^9.0.3",
@@ -16,11 +17,15 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.1",
         "animate.css": "^4.1.1",
         "bootstrap": "^4.5.2",
+        "file-loader": "^6.1.1",
+        "font-awesome-sass-loader": "^2.0.1",
         "jQuery": "^1.7.4",
         "jquery": "^3.5.1",
         "popper.js": "^1.16.1",
-        "typed.js": "^2.0.11"
+        "typed.js": "^2.0.11",
+        "url-loader": "^4.1.1"
     }
 }
