--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "font-awesome-sass-loader": "^2.0.1",
         "jQuery": "^1.7.4",
         "jquery": "^3.5.1",
+        "jquery-easing": "0.0.1",
         "popper.js": "^1.16.1",
         "typed.js": "^2.0.11",
         "url-loader": "^4.1.1"
