--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "build": "encore production --progress",
-        "postinstall": "encore production --progress"
+        "build": "encore production --progress"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.1",
