--- a/.env
+++ b/.env
@@ -31,3 +31,10 @@ APP_SECRET=e38a42f1747376d0b3f69e19decf2522
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=gmail://hichem.koched@gmail.com:ntyuxvvlllsfzynj@localhost
+###< symfony/swiftmailer-bundle ###
